# dewicats-program-library

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE.md  README.md  lerna.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: release-program.yaml  tests.yaml
programs/anchor-nft-staking/src/: lib.rs
programs/auction-manager/: Cargo.toml
programs/auction-manager/src/: error.rs  lib.rs  metaplex.rs  state.rs  transfer_pnft.rs
programs/auction-manager/src/instructions/: cancel_bid_v0.rs  claim_referral_rewards_v0.rs  execute_sale_v0.rs  initialize_auction_manager_v0.rs  initialize_bid_reciept_v0.rs  initialize_manager_v0.rs  initialize_referral_recipient_v0.rs  list_nft_v0.rs  mod.rs  place_bid_v0.rs  update_auction_manager_v0.rs  update_listing_v0.rs
programs/fanout/src/: lib.rs  state.rs
programs/fanout/src/instructions/: distribute_v0.rs  initialize_fanout_v0.rs  mod.rs
programs/stake/: Cargo.toml
programs/stake-manager/: Cargo.toml
programs/stake-manager/src/: error.rs  lib.rs  state.rs
programs/stake-manager/src/instructions/: mod.rs  stake_v0.rs  unstake_v0.rs
programs/stake/src/: lib.rs
scripts/: setup-fanouts.ts
tests/: anchor-nft-staking.ts  auction-manager.ts  fanout.ts  stake  stake-manager.ts
tests/utils/: fixtures.ts
utils/: createNFT.ts  distribute.ts  setupNft.ts
utils/shared-utils/: Cargo.toml
