[workspace]
members = [
  "programs/*"
]
exclude = [
  "deps/metaplex-program-library/bubblegum/program", 
  "deps/metaplex-program-library/token-metadata/program",
]

[workspace.dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["mint", "token"] }
default-env = "0.1.1"
mpl-token-metadata = { version = "3.2.0" }
solana-security-txt = "1.1.1"
shared-utils = { path = "./utils/shared-utils" }
