[workspace]
members = [
  "programs/*",
]

[workspace.dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["mint", "token"] }
mpl-token-metadata = { version = "1.13.2", features = ["no-entrypoint"] }
mpl-token-auth-rules = { version = "1.4.3-beta.1" }
solana-program = { version = "1.16.19" }
