[package]
name = "auction-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
bs58 = "0.3.1"
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
ahash = { workspace = true }
default-env = { workspace = true }
mpl-token-metadata = { workspace = true }
solana-security-txt = { workspace = true }

